--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
   <!-- Custom CSS-->
   <link rel="stylesheet" href="css/styles.css">
 <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Lato" rel="stylesheet">
-  <!-- jQuery HAS TO GO BEFORE JAVA SCRIPT-->
-  <script src="lib/jquery.min.js"></script>
 
-  <!-- Bootstrap Java Script-->
-  <script src="lib/bootstrap.min.js"></script>
-  <script src="js/scripts.js"></script>
 
 
 
@@ -31,7 +26,7 @@
   <div class="container">
     <h1> Silly Story Generator</h1>
 
-  <p> Fill in the the boxes with the corresponding parts of speech, click the button, and read for laughs!</p>
+  <p>  Fill in the the boxes with the corresponding parts of speech, click the button, and read for laughs!</p>
   <div class="row">
     <div class="col-sm-1 col-md-2"></div>
           <div class="col-sm-10 col-md-8 ">
@@ -47,9 +42,31 @@
 
     <div id="story"></div>
 
+    <!-- AddToAny BEGIN -->
+<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+<a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+<a class="a2a_button_facebook"></a>
+<a class="a2a_button_twitter"></a>
+<a class="a2a_button_google_plus"></a>
+<a class="a2a_button_pinterest"></a>
+<a class="a2a_button_email"></a>
+<a class="a2a_button_linkedin"></a>
+</div>
+<script async src="https://static.addtoany.com/menu/page.js"></script>
+<!-- AddToAny END -->
+
   </div>
   </div>
       <div class="col-sm-1 col-md-2"></div>
   </div>
+
+
+
+  <!-- jQuery HAS TO GO BEFORE JAVA SCRIPT-->
+  <script src="lib/jquery.min.js"></script>
+
+  <!-- Bootstrap Java Script-->
+  <script src="lib/bootstrap.min.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
