--- a/index.html
+++ b/index.html
@@ -8,17 +8,10 @@
   <!-- Bootstrap Style Sheet -->
   <link rel="stylesheet" href="lib/bootstrap.min.css">
   <!-- Animate CSS -->
-
+  <link rel="stylesheet" href="lib/animate.min.css">
   <!-- Custom CSS-->
   <link rel="stylesheet" href="css/styles.css">
 <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Lato" rel="stylesheet">
-
-
-
-
-
-
-
 
 </head>
 
