added to the story no pulse animation anymore

--- a/index.html
+++ b/index.html
@@ -28,25 +28,16 @@
       <input id="noun1" type="text" class="form-control" placeholder="noun">
       <input id="verb1" type="text" class="form-control" placeholder="verb">
       <input id="adj1" type="text" class="form-control" placeholder="adjective">
+      <input id="verb2" type="text" class="form-control" placeholder="verb">
       <input id="noun2" type="text" class="form-control" placeholder="noun">
+      <input id="name" type="text" class="form-control" placeholder="name">
       <div id="show-story-btn" class="btn btn-warning form-control">Generate</div>
 
     </form>
 
     <div id="story"></div>
 
-    <!-- AddToAny BEGIN -->
-<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-<a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-<a class="a2a_button_facebook"></a>
-<a class="a2a_button_twitter"></a>
-<a class="a2a_button_google_plus"></a>
-<a class="a2a_button_pinterest"></a>
-<a class="a2a_button_email"></a>
-<a class="a2a_button_linkedin"></a>
-</div>
-<script async src="https://static.addtoany.com/menu/page.js"></script>
-<!-- AddToAny END -->
+
 
   </div>
   </div>
