--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="css/styles.css">
 <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Lato" rel="stylesheet">
 
+  <link rel="icon" href="img/laughing-favicon.ico">
+
 </head>
 
 <body>
